--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Siladas Bakso Siram Pedas">
+    <meta name="keywords" content="siladas, bakso siram pedas, siram lada kebas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Siladas Store</title>
 
